--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
   "scripts": {
-    "start": "snowpack dev",
+    "dev": "snowpack dev",
     "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-postcss": "^1.4.3",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
-    "@snowpack/web-test-runner-plugin": "^0.2.2",
-    "@testing-library/react": "^11.2.6",
-    "@types/chai": "^4.2.17",
-    "@types/mocha": "^8.2.2",
+    "@types/prettier": "^2.3.2",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
     "@types/snowpack-env": "^2.3.3",
-    "@web/test-runner": "^0.13.3",
-    "chai": "^4.3.4",
+    "postcss": "^8.3.5",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.2.4"
   }
 }
