--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
-    "jsx": "preserve",
-    "baseUrl": "./",
-    /* paths - import rewriting/resolving */
+    "jsx": "preserve" /* paths - import rewriting/resolving */,
     "paths": {
       // If you configured any Snowpack aliases, add them here.
       // Add this line to get types for streaming imports (packageOptions.source="remote"):
