--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
     "build": "snowpack build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "format:full": "prettier --write .",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "clean": "rm -rf node_modules"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
+    "firebase": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "tailwindcss-classnames": "^2.2.1"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
