--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
     "build": "snowpack build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "format:full": "prettier --write .",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint --fix .",
     "clean": "rm -rf node_modules"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
     "firebase": "^8.7.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "tailwindcss-classnames": "^2.2.1"
+    "tailwindcss-classnames": "^2.2.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-postcss": "^1.4.3",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/node": "^16.3.2",
     "@types/prettier": "^2.3.2",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
