--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "format:full": "prettier --write .",
     "lint": "eslint --fix .",
-    "clean": "rm -rf node_modules"
+    "clean": "rm -rf node_modules",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
+    "draft-js": "^0.11.7",
     "firebase": "^8.7.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-rte": "^0.16.3",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "tailwindcss-classnames": "^2.2.1",
@@ -25,17 +29,23 @@
     "@snowpack/plugin-postcss": "^1.4.3",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/draft-js": "^0.11.4",
+    "@types/eslint": "^7.28.0",
     "@types/node": "^16.3.2",
     "@types/prettier": "^2.3.2",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-rte": "^0.16.2",
     "@types/snowpack-env": "^2.3.3",
+    "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
